Not found page and home hero

--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
@@ -13,6 +13,14 @@
     <Template Key="8a6f705f-2f7f-48c9-8d60-9dbbc544aa3a">Home</Template>
   </Info>
   <Properties>
+    <backgroundColour>
+      <Value><![CDATA[{
+  "value": "031633",
+  "label": "Primary Subtle",
+  "sortOrder": 1,
+  "id": "2"
+}]]></Value>
+    </backgroundColour>
     <contentBlocks>
       <Value><![CDATA[{
   "layout": {
