--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/search.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/search.config
@@ -1,59 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="bd3f1b5a-1d95-4b19-a9b1-46ba99f540eb" Alias="Search" Level="2">
-  <Info>
-    <Parent Key="64837c06-45a0-4108-9d97-a64c1cf74240">Home</Parent>
-    <Path>/Home/Search</Path>
-    <Trashed>false</Trashed>
-    <ContentType>search</ContentType>
-    <CreateDate>2023-08-14T18:14:42</CreateDate>
-    <NodeName Default="Search" />
-    <SortOrder>3</SortOrder>
-    <Published Default="true" />
-    <Schedule />
-    <Template Key="ece7d152-17de-49ce-9177-98de9329f465">Search</Template>
-  </Info>
-  <Properties>
-    <heroHeading>
-      <Value><![CDATA[]]></Value>
-    </heroHeading>
-    <heroIntroduction>
-      <Value><![CDATA[]]></Value>
-    </heroIntroduction>
-    <metaData>
-      <Value><![CDATA[{
-  "title": "Search",
-  "description": "",
-  "noIndex": false,
-  "shareTitle": "Search",
-  "shareDescription": "",
-  "shareImage": null,
-  "shareImageUrl": null,
-  "default": {
-    "title": "",
-    "description": ""
-  },
-  "share": {
-    "title": "",
-    "description": "",
-    "image": null,
-    "imageUrl": null
-  }
-}]]></Value>
-    </metaData>
-    <umbracoInternalRedirectId>
-      <Value><![CDATA[]]></Value>
-    </umbracoInternalRedirectId>
-    <umbracoNaviHide>
-      <Value><![CDATA[1]]></Value>
-    </umbracoNaviHide>
-    <umbracoRedirect>
-      <Value><![CDATA[]]></Value>
-    </umbracoRedirect>
-    <umbracoUrlAlias>
-      <Value><![CDATA[]]></Value>
-    </umbracoUrlAlias>
-    <umbracoUrlName>
-      <Value><![CDATA[]]></Value>
-    </umbracoUrlName>
-  </Properties>
-</Content>
+<Empty Key="bd3f1b5a-1d95-4b19-a9b1-46ba99f540eb" Alias="Search" Change="Delete" Level="101" />
