--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/home.config
@@ -28,9 +28,24 @@
     <ContentType Key="f7d2df8e-d476-40b5-9ebe-3a02a0352aaa" SortOrder="1">contentPage</ContentType>
     <ContentType Key="fe6014e9-b08a-4dcd-9b97-af02cd2d1fcf" SortOrder="2">products</ContentType>
     <ContentType Key="92f16d30-1933-45f2-a9d4-d61c02f41e98" SortOrder="3">blog</ContentType>
-    <ContentType Key="01b41d8c-0f21-4989-bb01-ced3a2c27f42" SortOrder="4">search</ContentType>
   </Structure>
   <GenericProperties>
+    <GenericProperty>
+      <Key>ff4a54ce-763b-4a78-ba27-ced53ac832a9</Key>
+      <Name>Background Colour</Name>
+      <Alias>backgroundColour</Alias>
+      <Definition>012d4759-1f87-4134-9507-4f268ac28dd9</Definition>
+      <Type>Umbraco.ColorPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>4</SortOrder>
+      <Tab Alias="hero">Hero</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
     <GenericProperty>
       <Key>31d99047-f173-4823-bc29-5d1c06ce26d8</Key>
       <Name>Content Blocks</Name>
