--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/notfoundpage.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/notfoundpage.config
@@ -15,13 +15,42 @@
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
     <Folder>Pages</Folder>
-    <Compositions />
+    <Compositions>
+      <Composition Key="6e9127cb-0718-4349-b564-467a206d656a">hero</Composition>
+      <Composition Key="c18503eb-c34d-4110-acd0-1f79b1c62d48">heroImage</Composition>
+      <Composition Key="b052179a-7bf5-401f-87b8-1006f44d451a">meta</Composition>
+    </Compositions>
     <DefaultTemplate>NotFoundPage</DefaultTemplate>
     <AllowedTemplates>
       <Template Key="b38e60c9-3dee-4822-b6d2-e64c88830929">NotFoundPage</Template>
     </AllowedTemplates>
   </Info>
   <Structure />
-  <GenericProperties />
-  <Tabs />
+  <GenericProperties>
+    <GenericProperty>
+      <Key>e95ab5f6-1bb8-4f47-9cef-fbded242cb32</Key>
+      <Name>Text</Name>
+      <Alias>text</Alias>
+      <Definition>ca90c950-0aff-4e72-b976-a30b1ac57dad</Definition>
+      <Type>Umbraco.TinyMCE</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+  </GenericProperties>
+  <Tabs>
+    <Tab>
+      <Key>6136a417-e33e-4b6c-b794-3bbf7277c0c1</Key>
+      <Caption>Content</Caption>
+      <Alias>content</Alias>
+      <Type>Tab</Type>
+      <SortOrder>1</SortOrder>
+    </Tab>
+  </Tabs>
 </ContentType>
