--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/search.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/search.config
@@ -1,55 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="01b41d8c-0f21-4989-bb01-ced3a2c27f42" Alias="search" Level="2">
-  <Info>
-    <Name>Search</Name>
-    <Icon>icon-search color-black</Icon>
-    <Thumbnail>folder.png</Thumbnail>
-    <Description></Description>
-    <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
-    <Variations>Nothing</Variations>
-    <IsElement>false</IsElement>
-    <HistoryCleanup>
-      <PreventCleanup>False</PreventCleanup>
-      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
-      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
-    </HistoryCleanup>
-    <Folder>Pages</Folder>
-    <Compositions>
-      <Composition Key="6e9127cb-0718-4349-b564-467a206d656a">hero</Composition>
-      <Composition Key="b052179a-7bf5-401f-87b8-1006f44d451a">meta</Composition>
-    </Compositions>
-    <DefaultTemplate>Search</DefaultTemplate>
-    <AllowedTemplates>
-      <Template Key="ece7d152-17de-49ce-9177-98de9329f465">Search</Template>
-    </AllowedTemplates>
-  </Info>
-  <Structure />
-  <GenericProperties>
-    <GenericProperty>
-      <Key>1f7e034f-7531-42d0-9e62-a341db532b51</Key>
-      <Name>No Results Message</Name>
-      <Alias>noResultsMessage</Alias>
-      <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
-      <Type>Umbraco.TinyMCE</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-  </GenericProperties>
-  <Tabs>
-    <Tab>
-      <Key>baa4b7c3-1b9d-4102-9498-9b30004898e6</Key>
-      <Caption>Content</Caption>
-      <Alias>content</Alias>
-      <Type>Tab</Type>
-      <SortOrder>2</SortOrder>
-    </Tab>
-  </Tabs>
-</ContentType>
+<Empty Key="01b41d8c-0f21-4989-bb01-ced3a2c27f42" Alias="search" Change="Delete" />
