--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
@@ -14,12 +14,7 @@
   </Info>
   <Properties>
     <backgroundColour>
-      <Value><![CDATA[{
-  "value": "031633",
-  "label": "Primary Subtle",
-  "sortOrder": 1,
-  "id": "2"
-}]]></Value>
+      <Value><![CDATA[]]></Value>
     </backgroundColour>
     <contentBlocks>
       <Value><![CDATA[{
