Added more block types

--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/product.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/product.config
@@ -62,8 +62,8 @@
       <Key>151ab4a9-31f5-4dfc-8a17-9e92e84febb2</Key>
       <Name>Detailed Description</Name>
       <Alias>detailedDescription</Alias>
-      <Definition>ca90c950-0aff-4e72-b976-a30b1ac57dad</Definition>
-      <Type>Umbraco.TinyMCE</Type>
+      <Definition>0f34f4ba-d406-4504-918c-53da6d29e426</Definition>
+      <Type>Umbraco.BlockList</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
