--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ContentBlocks.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ContentBlocks.config
@@ -9,7 +9,19 @@
   "Blocks": [
     {
       "backgroundColor": null,
-      "contentElementTypeKey": "dee6aa15-7b3d-416c-a916-b544a4c21eab",
+      "contentElementTypeKey": "12ea1cdd-49ae-476b-9f09-cab989a08c84",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{internalName}}",
+      "settingsElementTypeKey": "05318a7e-a7d9-4873-b690-ce59efdc4e62",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "d9fc399e-9b38-4a4f-bea9-5b25de157ce7",
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false,
       "iconColor": null,
@@ -21,7 +33,7 @@
     },
     {
       "backgroundColor": null,
-      "contentElementTypeKey": "d9fc399e-9b38-4a4f-bea9-5b25de157ce7",
+      "contentElementTypeKey": "dee6aa15-7b3d-416c-a916-b544a4c21eab",
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false,
       "iconColor": null,
