--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ImageMediaPicker.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ImageMediaPicker.config
@@ -6,9 +6,9 @@
     <DatabaseType>Ntext</DatabaseType>
   </Info>
   <Config><![CDATA[{
-  "Crops": null,
-  "EnableLocalFocalPoint": false,
-  "Filter": "Image",
+  "Crops": [],
+  "EnableLocalFocalPoint": true,
+  "Filter": "Image,umbracoMediaVectorGraphics",
   "IgnoreUserStartNodes": false,
   "Multiple": false,
   "StartNodeId": null,
