Wired up new blocks

--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/button.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/button.config
@@ -2,7 +2,7 @@
 <ContentType Key="39ae5064-015b-46e9-9a7b-73663ae1c712" Alias="button" Level="2">
   <Info>
     <Name>Button</Name>
-    <Icon>icon-tab color-deep-purple</Icon>
+    <Icon>icon-circle-dotted color-deep-purple</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
