--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/gallery.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/gallery.config
@@ -1,25 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="fb6a4b5d-84fe-4487-8e7a-a2af15bcd953" Alias="gallery" Level="2">
-  <Info>
-    <Name>Gallery</Name>
-    <Icon>icon-pictures-alt-2 color-indigo</Icon>
-    <Thumbnail>folder.png</Thumbnail>
-    <Description></Description>
-    <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
-    <Variations>Nothing</Variations>
-    <IsElement>false</IsElement>
-    <HistoryCleanup>
-      <PreventCleanup>False</PreventCleanup>
-      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
-      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
-    </HistoryCleanup>
-    <Folder>Blocks</Folder>
-    <Compositions />
-    <DefaultTemplate></DefaultTemplate>
-    <AllowedTemplates />
-  </Info>
-  <Structure />
-  <GenericProperties />
-  <Tabs />
-</ContentType>
+<Empty Key="fb6a4b5d-84fe-4487-8e7a-a2af15bcd953" Alias="gallery" Change="Rename" />
