--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/sliderblock.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/sliderblock.config
@@ -22,6 +22,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>c67abbf3-3039-4569-a428-3afff99a428a</Key>
+      <Name>Heading</Name>
+      <Alias>heading</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>9b9ecf19-b9dd-4734-9875-0377fcd458fe</Key>
       <Name>Internal Name</Name>
       <Alias>internalName</Alias>
@@ -38,6 +54,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>6269bfd5-e704-43b3-9095-39c11bed8261</Key>
+      <Name>Introduction</Name>
+      <Alias>introduction</Alias>
+      <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
+      <Type>Umbraco.TinyMCE</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>b61b841d-d5e0-4097-90c8-e473f05527f2</Key>
       <Name>Slides</Name>
       <Alias>slides</Alias>
@@ -46,7 +78,7 @@
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[The slider slides]]></Description>
-      <SortOrder>1</SortOrder>
+      <SortOrder>3</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
