--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ContentBlocks.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ContentBlocks.config
@@ -42,6 +42,66 @@
       "stylesheet": null,
       "thumbnail": null,
       "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "b5ed32a8-c0ff-4a93-8d18-e9255aab906c",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{internalName}}",
+      "settingsElementTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "19fa12ef-e39f-475e-a869-1704fb32c226",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{internalName}}",
+      "settingsElementTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "fb6a4b5d-84fe-4487-8e7a-a2af15bcd953",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{internalName}}",
+      "settingsElementTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "0feeb912-afd9-4c1b-b4cd-0ddba51b9952",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{internalName}}",
+      "settingsElementTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "9ba341c6-5dec-4c47-9e74-6ec4f2f1abc1",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{internalName}}",
+      "settingsElementTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
     }
   ],
   "MaxPropertyWidth": null,
