--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/Tabs.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/Tabs.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="3ac61307-c4c0-413a-a835-5aaf52401424" Alias="Slider Block" Level="1">
+<DataType Key="33d1cfd5-c8d3-4908-a734-27df5faedbce" Alias="Tabs" Level="1">
   <Info>
-    <Name>Slider Block</Name>
+    <Name>Tabs</Name>
     <EditorAlias>Umbraco.BlockList</EditorAlias>
     <DatabaseType>Ntext</DatabaseType>
   </Info>
@@ -9,7 +9,7 @@
   "Blocks": [
     {
       "backgroundColor": null,
-      "contentElementTypeKey": "4f11bd80-b08f-4e04-8fb6-95d4e5f1ee83",
+      "contentElementTypeKey": "2640a165-b4b0-4462-8404-cdfe1fa8b004",
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false,
       "iconColor": null,
@@ -23,10 +23,10 @@
   "MaxPropertyWidth": null,
   "UseInlineEditingAsDefault": false,
   "UseLiveEditing": false,
-  "UseSingleBlockMode": false,
+  "UseSingleBlockMode": true,
   "ValidationLimit": {
     "max": null,
-    "min": null
+    "min": 1
   }
 }]]></Config>
 </DataType>
