--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/galleryblock.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/galleryblock.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="0feeb912-afd9-4c1b-b4cd-0ddba51b9952" Alias="tabsBlock" Level="2">
+<ContentType Key="fb6a4b5d-84fe-4487-8e7a-a2af15bcd953" Alias="galleryBlock" Level="2">
   <Info>
-    <Name>Tabs</Name>
-    <Icon>icon-tab color-indigo</Icon>
+    <Name>Gallery</Name>
+    <Icon>icon-pictures-alt-2 color-indigo</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
@@ -22,12 +22,12 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>632bd46d-5282-47bc-aafa-bce4274be860</Key>
+      <Key>74882479-ccf2-46a2-be2e-b128eee90aff</Key>
       <Name>Heading</Name>
       <Alias>heading</Alias>
       <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
       <Type>Umbraco.TextBox</Type>
-      <Mandatory>true</Mandatory>
+      <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
@@ -38,14 +38,30 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>7f4e3563-e702-4e40-b181-47e82cb077e1</Key>
+      <Key>97a1d463-7477-4b74-95e8-0ef36f561afb</Key>
+      <Name>Images</Name>
+      <Alias>images</Alias>
+      <Definition>88db1c70-7930-4b77-8a2f-820220b16128</Definition>
+      <Type>Umbraco.MediaPicker3</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>3</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>d726a2b9-409a-416c-9e0e-6594d9dc8eda</Key>
       <Name>Internal Name</Name>
       <Alias>internalName</Alias>
       <Definition>fd70a433-6939-4d7e-84b8-59392baa4277</Definition>
       <Type>Umbraco.TextBox</Type>
       <Mandatory>true</Mandatory>
       <Validation></Validation>
-      <Description><![CDATA[]]></Description>
+      <Description><![CDATA[The heading used to identify the block in the backoffice]]></Description>
       <SortOrder>0</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
@@ -54,7 +70,7 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>2eef6a85-b57b-4071-88fe-f3c274042c23</Key>
+      <Key>5b629c6f-22ed-487b-8396-8b777a82a992</Key>
       <Name>Introduction</Name>
       <Alias>introduction</Alias>
       <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
@@ -69,26 +85,10 @@
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
-    <GenericProperty>
-      <Key>70cdf338-487c-4cbc-8660-49e854a710e1</Key>
-      <Name>Items</Name>
-      <Alias>items</Alias>
-      <Definition>33d1cfd5-c8d3-4908-a734-27df5faedbce</Definition>
-      <Type>Umbraco.BlockList</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>3</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>1cccdd24-2801-40e6-a466-3ae6bf5a32a7</Key>
+      <Key>fbb853d9-802f-447a-808c-1fa5c7c879bd</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Tab</Type>
