--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/richtextblock.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/richtextblock.config
@@ -22,6 +22,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>9471c409-38a0-4ecc-bebf-31e51f05aa12</Key>
+      <Name>Heading</Name>
+      <Alias>heading</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>53734c8a-1632-46ad-988f-cbde9a6828f8</Key>
       <Name>Image</Name>
       <Alias>image</Alias>
@@ -30,7 +46,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>2</SortOrder>
+      <SortOrder>3</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -54,6 +70,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>ea60c9ea-14ad-4c3b-9b3b-878f078733fa</Key>
+      <Name>Introduction</Name>
+      <Alias>introduction</Alias>
+      <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
+      <Type>Umbraco.TinyMCE</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>81dc5626-7a3e-4ab1-b3aa-2d35406afb7c</Key>
       <Name>Text</Name>
       <Alias>text</Alias>
@@ -62,7 +94,7 @@
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
+      <SortOrder>4</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
