--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/slide.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/slide.config
@@ -30,7 +30,23 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>2</SortOrder>
+      <SortOrder>3</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>aff45144-6455-454f-81ad-b497be82cf04</Key>
+      <Name>Image</Name>
+      <Alias>image</Alias>
+      <Definition>10b1d38b-7a54-438d-93f3-d61a762684ff</Definition>
+      <Type>Umbraco.MediaPicker3</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -46,7 +62,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
+      <SortOrder>2</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -57,12 +73,12 @@
       <Key>2dc875ca-b3d9-4ae7-9b2b-644b0569de12</Key>
       <Name>Title</Name>
       <Alias>title</Alias>
-      <Definition>3c6830ec-75d6-476b-97b3-a467dce30762</Definition>
-      <Type>ourHtagEditor</Type>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>0</SortOrder>
+      <SortOrder>1</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -78,7 +94,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>3</SortOrder>
+      <SortOrder>4</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
