--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/tab.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/tab.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="19fa12ef-e39f-475e-a869-1704fb32c226" Alias="alertBlock" Level="2">
+<ContentType Key="2640a165-b4b0-4462-8404-cdfe1fa8b004" Alias="tab" Level="2">
   <Info>
-    <Name>Alert</Name>
-    <Icon>icon-alert-alt color-indigo</Icon>
+    <Name>Tab</Name>
+    <Icon>icon-tab color-deep-purple</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
@@ -14,7 +14,7 @@
       <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
-    <Folder>Blocks</Folder>
+    <Folder>Elements</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
@@ -22,27 +22,11 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>bf931f6a-b254-4aaa-aed8-aca78d36f35c</Key>
-      <Name>Internal Name</Name>
-      <Alias>internalName</Alias>
-      <Definition>fd70a433-6939-4d7e-84b8-59392baa4277</Definition>
-      <Type>Umbraco.TextBox</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[The heading used to identify the block in the backoffice]]></Description>
-      <SortOrder>0</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>ca44d27d-0f7c-4050-b851-d0cf5ca358c9</Key>
-      <Name>Style</Name>
-      <Alias>style</Alias>
-      <Definition>0a25f868-c164-4b0f-a351-2236fd060f1d</Definition>
-      <Type>Umbraco.Community.Contentment.DataList</Type>
+      <Key>d73623ab-45d5-45ee-9258-ba6f2a5c2f0c</Key>
+      <Name>Content</Name>
+      <Alias>content</Alias>
+      <Definition>ca90c950-0aff-4e72-b976-a30b1ac57dad</Definition>
+      <Type>Umbraco.TinyMCE</Type>
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
@@ -54,15 +38,15 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>3c811d66-e0d6-4211-8a41-cd2631e8cd68</Key>
-      <Name>Text</Name>
-      <Alias>text</Alias>
-      <Definition>38e740e0-8d15-4952-b686-785e88db51df</Definition>
-      <Type>Umbraco.TinyMCE</Type>
+      <Key>e864e25e-3527-4568-8d12-d668711d0199</Key>
+      <Name>Title</Name>
+      <Alias>title</Alias>
+      <Definition>77ea65d2-1c83-4581-b9b5-404f4bef8095</Definition>
+      <Type>Umbraco.TextBox</Type>
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>2</SortOrder>
+      <SortOrder>0</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -72,7 +56,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>c2893f8b-d870-4f51-8429-0e1dd9c88769</Key>
+      <Key>10ea09c3-b1de-4078-9aad-1a3cdc325ad8</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Tab</Type>
