--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/Accordion.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/Accordion.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="3ac61307-c4c0-413a-a835-5aaf52401424" Alias="Slider Block" Level="1">
+<DataType Key="6d8e402c-a8a7-46ca-b1f1-fe664362405b" Alias="Accordion" Level="1">
   <Info>
-    <Name>Slider Block</Name>
+    <Name>Accordion</Name>
     <EditorAlias>Umbraco.BlockList</EditorAlias>
     <DatabaseType>Ntext</DatabaseType>
   </Info>
@@ -9,7 +9,7 @@
   "Blocks": [
     {
       "backgroundColor": null,
-      "contentElementTypeKey": "4f11bd80-b08f-4e04-8fb6-95d4e5f1ee83",
+      "contentElementTypeKey": "128843f0-a5db-4eaa-b38f-da5bbc5d84e7",
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false,
       "iconColor": null,
@@ -23,10 +23,10 @@
   "MaxPropertyWidth": null,
   "UseInlineEditingAsDefault": false,
   "UseLiveEditing": false,
-  "UseSingleBlockMode": false,
+  "UseSingleBlockMode": true,
   "ValidationLimit": {
     "max": null,
-    "min": null
+    "min": 1
   }
 }]]></Config>
 </DataType>
