--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/GalleryMediaPicker.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/GalleryMediaPicker.config
@@ -1,12 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="0e63d883-b62b-4799-88c3-157f82e83ecc" Alias="Multiple Image Media Picker" Level="1">
+<DataType Key="88db1c70-7930-4b77-8a2f-820220b16128" Alias="Gallery - Media Picker" Level="1">
   <Info>
-    <Name>Multiple Image Media Picker</Name>
+    <Name>Gallery - Media Picker</Name>
     <EditorAlias>Umbraco.MediaPicker3</EditorAlias>
     <DatabaseType>Ntext</DatabaseType>
   </Info>
   <Config><![CDATA[{
-  "Crops": [],
+  "Crops": [
+    {
+      "alias": "thumbnail",
+      "height": 250,
+      "label": "Thumbnail",
+      "width": 380
+    },
+    {
+      "alias": "large",
+      "height": 900,
+      "label": "Large",
+      "width": 900
+    }
+  ],
   "EnableLocalFocalPoint": true,
   "Filter": "Image",
   "IgnoreUserStartNodes": false,
