--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/SlideMediaPicker.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/SlideMediaPicker.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="ad9f0cf2-bda2-45d5-9ea1-a63cfc873fd3" Alias="Image Media Picker" Level="1">
+<DataType Key="10b1d38b-7a54-438d-93f3-d61a762684ff" Alias="Slide - Media Picker" Level="1">
   <Info>
-    <Name>Image Media Picker</Name>
+    <Name>Slide - Media Picker</Name>
     <EditorAlias>Umbraco.MediaPicker3</EditorAlias>
     <DatabaseType>Ntext</DatabaseType>
   </Info>
@@ -9,9 +9,9 @@
   "Crops": [
     {
       "alias": "image",
-      "height": 408,
+      "height": 450,
       "label": "Image",
-      "width": 612
+      "width": 600
     }
   ],
   "EnableLocalFocalPoint": true,
@@ -20,8 +20,8 @@
   "Multiple": false,
   "StartNodeId": null,
   "ValidationLimit": {
-    "max": 1,
-    "min": 0
+    "max": null,
+    "min": null
   }
 }]]></Config>
 </DataType>
