--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/blocks-test.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/blocks-test.config
@@ -42,6 +42,10 @@
       {
         "contentUdi": "umb://element/aa3e6de4335049e68dc39b2b580b654f",
         "settingsUdi": "umb://element/15441d5f6a7a45c88a4f8740e2088a7a"
+      },
+      {
+        "contentUdi": "umb://element/dbefd12e689f4fe893fafe62392b5bbc",
+        "settingsUdi": "umb://element/f22ad8bda96c42529a739793d4ae25bc"
       }
     ]
   },
@@ -85,6 +89,14 @@
       "internalName": "Slider",
       "slides": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/db416451fcc148979ce986231d602c6f\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/def696ed12204505a17119776b732f7c\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"4f11bd80-b08f-4e04-8fb6-95d4e5f1ee83\",\r\n      \"udi\": \"umb://element/db416451fcc148979ce986231d602c6f\",\r\n      \"title\": \"Slide 1\",\r\n      \"text\": \"<p>Content 1</p>\",\r\n      \"button\": \"[{\\\"name\\\":\\\"Home\\\",\\\"udi\\\":\\\"umb://document/64837c0645a041089d97a64c1cf74240\\\"}]\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"27865a1e-36a3-4806-9756-652126c08ad2\\\",\\r\\n    \\\"mediaKey\\\": \\\"e4aeab4d-87d0-477b-94ce-d7ca9d0fed97\\\"\\r\\n  }\\r\\n]\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"4f11bd80-b08f-4e04-8fb6-95d4e5f1ee83\",\r\n      \"udi\": \"umb://element/def696ed12204505a17119776b732f7c\",\r\n      \"title\": \"Slide 2\",\r\n      \"text\": \"<p>Content 2</p>\",\r\n      \"button\": \"[{\\\"name\\\":\\\"About Us\\\",\\\"udi\\\":\\\"umb://document/872f8f0b6923407790043275d55ce07f\\\"}]\",\r\n      \"image\": \"[\\r\\n  {\\r\\n    \\\"key\\\": \\\"7606dd4e-208d-41eb-882f-8966ce9c1153\\\",\\r\\n    \\\"mediaKey\\\": \\\"986de8cd-d369-47f2-a8cd-18a4a38b7be0\\\"\\r\\n  }\\r\\n]\"\r\n    }\r\n  ],\r\n  \"settingsData\": []\r\n}",
       "introduction": ""
+    },
+    {
+      "contentTypeKey": "3a7c257a-c341-4fb8-a618-b013503a51e0",
+      "udi": "umb://element/dbefd12e689f4fe893fafe62392b5bbc",
+      "internalName": "Map",
+      "introduction": "",
+      "map": "{\"marker\":{\"latitude\":51.007463348399995,\"longitude\":-0.9354042924867191},\"zoom\":16,\"boundingBox\":{\"southWestCorner\":{\"latitude\":51.004803461212255,\"longitude\":-0.9411764144897462},\"northEastCorner\":{\"latitude\":51.01020408782216,\"longitude\":-0.9295892715454103}}}",
+      "heading": "Map"
     }
   ],
   "settingsData": [
@@ -110,6 +122,10 @@
       "contentTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
       "udi": "umb://element/15441d5f6a7a45c88a4f8740e2088a7a",
       "backgroundColour": "{\r\n  \"value\": \"031633\",\r\n  \"label\": \"Primary Subtle\",\r\n  \"sortOrder\": 1,\r\n  \"id\": \"2\"\r\n}"
+    },
+    {
+      "contentTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "udi": "umb://element/f22ad8bda96c42529a739793d4ae25bc"
     }
   ]
 }]]></Value>
