--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ContentBlocks.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ContentBlocks.config
@@ -102,6 +102,18 @@
       "stylesheet": null,
       "thumbnail": null,
       "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "3a7c257a-c341-4fb8-a618-b013503a51e0",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{internalName}}",
+      "settingsElementTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
     }
   ],
   "MaxPropertyWidth": null,
