Forms block fields

--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/biker-jacket.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/biker-jacket.config
@@ -31,11 +31,33 @@
       <Value><![CDATA[Donec rutrum congue leo eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.]]></Value>
     </description>
     <detailedDescription>
-      <Value><![CDATA[<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla justo eros, bibendum eget quam eget, tincidunt vestibulum enim. Integer et erat scelerisque, scelerisque ex ut, vulputate nulla. Morbi at tellus consequat, viverra magna a, gravida tortor. Maecenas enim nulla, rutrum a pulvinar quis, lobortis id orci. Vivamus felis enim, interdum quis nisi vitae, rhoncus eleifend nibh. Mauris erat eros, lobortis sed nulla ut, posuere eleifend mauris. Mauris in magna sed lacus aliquam sagittis ac eu elit. Proin nibh purus, dignissim quis suscipit euismod, congue ut nunc. Maecenas malesuada consequat magna nec sollicitudin.</p>
-<p>Integer ut tristique risus. Nullam rhoncus molestie est sed semper. Sed ornare rhoncus pellentesque. Nunc vitae tempus velit, sit amet suscipit ipsum. Donec sit amet lacus a nulla finibus sollicitudin. Pellentesque et mollis est. Cras massa magna, elementum facilisis erat sit amet, semper molestie sapien. Vestibulum laoreet vitae lectus viverra faucibus. Quisque in odio eget elit pulvinar tincidunt. Integer finibus malesuada orci, ac auctor diam sollicitudin vitae.</p>
-<p>Vestibulum a tincidunt tortor. Pellentesque commodo tortor condimentum fermentum tristique. Integer ornare vulputate leo, in porttitor neque eleifend at. Praesent tellus eros, finibus aliquam sollicitudin quis, congue sit amet orci. Quisque gravida diam sollicitudin, mattis odio placerat, fermentum nisi. Sed gravida ullamcorper sem, id hendrerit mi aliquet in. Quisque pellentesque fermentum congue. Donec ut urna non ante euismod pellentesque sed ut dolor. Maecenas elementum purus non lectus varius, et porttitor mi malesuada. Morbi ornare venenatis ante et dapibus.</p>
-<p>Pellentesque in egestas felis, eu placerat justo. Morbi venenatis quam quis eleifend tempor. Pellentesque commodo dictum lorem, quis placerat velit ullamcorper sed. Nullam semper molestie mi dapibus interdum. Cras feugiat pulvinar elit sit amet dictum. Mauris bibendum tellus non lorem fringilla, ut auctor lorem volutpat. Praesent varius felis tortor, eu rutrum felis gravida in. Integer vel consequat justo. In mollis luctus ornare.</p>
-<p>Pellentesque orci sem, condimentum quis vestibulum non, semper sed mi. Nam dignissim placerat metus quis tempus. Mauris efficitur nibh nec ornare lobortis. Praesent varius, dui vel porta fermentum, mi odio hendrerit turpis, posuere congue elit risus a nulla. Donec lacinia, ipsum vitae ornare sodales, leo metus tempus ante, efficitur ultricies lorem diam in tellus. Mauris a luctus arcu. Sed vel tincidunt ex, sit amet volutpat lorem. In sollicitudin mi elit, sit amet bibendum ex molestie dignissim. Aliquam ornare condimentum lorem, ac eleifend arcu porttitor a. Suspendisse pulvinar, urna vel volutpat consectetur, purus nibh posuere enim, vel ultrices dolor massa sed dolor. Cras at dignissim mi. Sed maximus quis felis non vehicula. Aliquam varius dignissim augue ut gravida.</p>]]></Value>
+      <Value><![CDATA[{
+  "layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentUdi": "umb://element/f399aa72c3fe49d492aece6dc930ad86",
+        "settingsUdi": "umb://element/7db650f792894a29b1439590375b852d"
+      }
+    ]
+  },
+  "contentData": [
+    {
+      "contentTypeKey": "12ea1cdd-49ae-476b-9f09-cab989a08c84",
+      "udi": "umb://element/f399aa72c3fe49d492aece6dc930ad86",
+      "internalName": "Detailed Description",
+      "heading": "Detailed Description",
+      "introduction": "",
+      "image": "[]",
+      "text": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi leo enim, eleifend ut nisi sit amet, aliquam suscipit mauris. Nunc tempor ac mi a lobortis. Donec dictum dignissim hendrerit. Pellentesque pellentesque sapien sit amet tincidunt dignissim. Nam pretium rutrum arcu, nec finibus ex fringilla sed. Duis sed risus ultrices, lacinia ante eu, laoreet nisl. Curabitur quis nisl ac orci malesuada vehicula id mollis mi. Nulla varius convallis orci, at commodo mauris consectetur at. Mauris ornare dui eu leo eleifend fermentum. Vestibulum tellus mauris, ornare vitae elementum sit amet, auctor non sem. Suspendisse orci ante, elementum in ligula a, viverra gravida nunc. Nulla dui purus, euismod a mollis ac, faucibus quis quam. Nulla fringilla dui vel mi congue, sed facilisis velit venenatis. Aliquam elementum ornare nisi.</p>\n<p>Fusce varius commodo arcu, nec efficitur velit porttitor at. Sed facilisis laoreet ligula et lobortis. Suspendisse blandit venenatis dolor, pellentesque fermentum turpis rhoncus vel. Duis vel consequat tellus, sed porta sapien. Nulla hendrerit viverra massa, in blandit magna vehicula at. Donec augue quam, lobortis in lacus condimentum, egestas auctor nibh. Pellentesque iaculis erat at erat rutrum convallis. Aenean id tortor consectetur, fermentum augue eu, consequat urna. Aenean dapibus id massa vel auctor. Ut rutrum maximus euismod. Curabitur lorem lacus, fringilla sit amet risus in, dignissim semper lorem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Integer facilisis at est id egestas. Donec eget posuere lacus, non fermentum tortor.</p>\n<p>Aenean suscipit hendrerit lacus, ut fringilla leo rhoncus accumsan. Aenean non justo leo. Fusce aliquet condimentum congue. Cras luctus viverra ex vel blandit. Vestibulum congue euismod accumsan. Quisque mattis mauris lectus, id pellentesque turpis iaculis vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus aliquam nisi, eu pulvinar nulla dictum placerat. Vivamus vehicula libero vel mattis consectetur.</p>\n<p>Praesent semper sit amet ex in maximus. Pellentesque cursus viverra posuere. Interdum et malesuada fames ac ante ipsum primis in faucibus. In fringilla odio sapien. Ut nec ligula quis nibh vehicula mollis sed quis dui. Cras augue est, pellentesque non bibendum ac, sodales ac tortor. Duis maximus suscipit ligula, vel rutrum velit auctor et. Etiam dui augue, finibus non feugiat quis, vehicula eget erat. Proin vestibulum vestibulum libero, ut fermentum dolor elementum at. Vivamus id erat suscipit, rhoncus tortor a, venenatis metus. Vestibulum vehicula est sapien, sit amet suscipit est interdum at.</p>\n<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi sed tortor et ipsum varius elementum. Fusce auctor purus non suscipit rutrum. Nulla pellentesque eget nisi id consequat. Phasellus sollicitudin convallis lorem, cursus porta neque porttitor ut. Nulla fermentum non erat sed feugiat. In hac habitasse platea dictumst. Sed at urna egestas, volutpat metus vitae, mattis sapien. Donec consequat, sem sit amet auctor laoreet, libero arcu interdum felis, id faucibus enim purus eu magna. Mauris sodales nibh quis quam eleifend, sed tincidunt tellus vehicula. In neque risus, porta nec ultrices vitae, placerat a lacus. Aenean tempor id nibh eu aliquam. Vestibulum ut leo porttitor, aliquet dolor id, euismod purus.</p>"
+    }
+  ],
+  "settingsData": [
+    {
+      "contentTypeKey": "05318a7e-a7d9-4873-b690-ce59efdc4e62",
+      "udi": "umb://element/7db650f792894a29b1439590375b852d"
+    }
+  ]
+}]]></Value>
     </detailedDescription>
     <features>
       <Value><![CDATA[{
