--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/blocks-test.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/blocks-test.config
@@ -24,6 +24,10 @@
   "layout": {
     "Umbraco.BlockList": [
       {
+        "contentUdi": "umb://element/36bba79112804b6e9e3aa37e14ab3563",
+        "settingsUdi": "umb://element/2c61b21eadc44d6593258cdc1727245c"
+      },
+      {
         "contentUdi": "umb://element/03b7075ab9ce4e7fbea60ebfcb44c50b",
         "settingsUdi": "umb://element/7241550547744fb487f37986e142fdd1"
       },
@@ -97,6 +101,17 @@
       "introduction": "",
       "map": "{\"marker\":{\"latitude\":51.007463348399995,\"longitude\":-0.9354042924867191},\"zoom\":16,\"boundingBox\":{\"southWestCorner\":{\"latitude\":51.004803461212255,\"longitude\":-0.9411764144897462},\"northEastCorner\":{\"latitude\":51.01020408782216,\"longitude\":-0.9295892715454103}}}",
       "heading": "Map"
+    },
+    {
+      "contentTypeKey": "cc481234-e170-42a5-b6a1-3a9d15c2af97",
+      "udi": "umb://element/36bba79112804b6e9e3aa37e14ab3563",
+      "internalName": "Form",
+      "heading": "Form",
+      "introduction": "",
+      "toEmailAddress": "test@test.com",
+      "fromEmailAddress": "",
+      "formFields": "{\r\n  \"layout\": {\r\n    \"Umbraco.BlockList\": [\r\n      {\r\n        \"contentUdi\": \"umb://element/b93e51e9ed884316a2d14d3a2496fdfc\"\r\n      },\r\n      {\r\n        \"contentUdi\": \"umb://element/cbf8909452fc435fac43cc9b829de3e6\"\r\n      }\r\n    ]\r\n  },\r\n  \"contentData\": [\r\n    {\r\n      \"contentTypeKey\": \"f332421d-60a2-4291-9699-16c1f5b025b5\",\r\n      \"udi\": \"umb://element/b93e51e9ed884316a2d14d3a2496fdfc\",\r\n      \"internalName\": \"Name\",\r\n      \"type\": \"text\",\r\n      \"label\": \"Name\",\r\n      \"placeholder\": \"Name\",\r\n      \"required\": \"1\",\r\n      \"requiredErrorMessage\": \"\",\r\n      \"autocomplete\": \"0\",\r\n      \"validation\": \"0\",\r\n      \"validationType\": \"\"\r\n    },\r\n    {\r\n      \"contentTypeKey\": \"08d02b02-ebe7-4369-be5a-d0e92fe4880f\",\r\n      \"udi\": \"umb://element/cbf8909452fc435fac43cc9b829de3e6\",\r\n      \"internalName\": \"Message\",\r\n      \"label\": \"Message\",\r\n      \"placeholder\": \"Your message here\",\r\n      \"required\": \"1\",\r\n      \"rows\": \"6\",\r\n      \"autocomplete\": \"0\",\r\n      \"validation\": \"0\",\r\n      \"validationType\": \"\"\r\n    }\r\n  ],\r\n  \"settingsData\": []\r\n}",
+      "confirmationPage": "umb://document/c079cbfa78e74d3ab75b27613ea6c4e0"
     }
   ],
   "settingsData": [
@@ -126,6 +141,10 @@
     {
       "contentTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
       "udi": "umb://element/f22ad8bda96c42529a739793d4ae25bc"
+    },
+    {
+      "contentTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "udi": "umb://element/2c61b21eadc44d6593258cdc1727245c"
     }
   ]
 }]]></Value>
