--- a/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ContentBlocks.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/DataTypes/ContentBlocks.config
@@ -114,6 +114,18 @@
       "stylesheet": null,
       "thumbnail": null,
       "view": null
+    },
+    {
+      "backgroundColor": null,
+      "contentElementTypeKey": "cc481234-e170-42a5-b6a1-3a9d15c2af97",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "iconColor": null,
+      "label": "{{internalName}}",
+      "settingsElementTypeKey": "ceceefd9-fd2b-4e68-b598-3742fe773c93",
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
     }
   ],
   "MaxPropertyWidth": null,
