Working Form Controller

--- a/UmbCheckout.StarterKit.Web/appsettings.json
+++ b/UmbCheckout.StarterKit.Web/appsettings.json
@@ -14,7 +14,15 @@
     "CMS": {
       "Global": {
         "Id": "299094a3-91de-4e51-8331-cc119eb967ee",
-        "SanitizeTinyMce": true
+        "SanitizeTinyMce": true,
+        "Smtp": {
+          "From": "noreply@umbcheckout.net",
+          "Host": "127.0.0.1",
+          "Port": 25,
+          "SecureSocketOptions": "None",
+          "Username": null,
+          "Password": null
+        }
       },
       "Content": {
         "AllowEditInvariantFromNonDefault": true,
