--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/formtextareamessage.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/formtextareamessage.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="cc481234-e170-42a5-b6a1-3a9d15c2af97" Alias="formBlock" Level="2">
+<ContentType Key="2a5e17b1-fc35-4f54-a1db-8e0ab442fc71" Alias="formTextAreaMessage" Level="3">
   <Info>
-    <Name>Form</Name>
-    <Icon>icon-message color-indigo</Icon>
+    <Name>Text Area (Message)</Name>
+    <Icon>icon-list color-deep-purple</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
@@ -14,7 +14,7 @@
       <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
-    <Folder>Blocks</Folder>
+    <Folder>Elements/Form</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
@@ -22,28 +22,12 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>6f9f2c73-2805-4186-9870-56e76f02a0d6</Key>
-      <Name>Confirmation Page</Name>
-      <Alias>confirmationPage</Alias>
-      <Definition>fd1e0da5-5606-4862-b679-5d0cf3a52a59</Definition>
-      <Type>Umbraco.ContentPicker</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>9</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>a40b550e-c679-4418-930c-5a86ff173941</Key>
-      <Name>Form Fields</Name>
-      <Alias>formFields</Alias>
-      <Definition>262b09a8-48e4-4627-bb9e-7df698eabe46</Definition>
-      <Type>Umbraco.BlockList</Type>
-      <Mandatory>true</Mandatory>
+      <Key>b22cdd85-878d-43f4-9e56-8749ffcd9c47</Key>
+      <Name>Autocomplete</Name>
+      <Alias>autocomplete</Alias>
+      <Definition>92897bc6-a5f3-4ffe-ae27-f2e7e33dda49</Definition>
+      <Type>Umbraco.TrueFalse</Type>
+      <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>7</SortOrder>
@@ -54,31 +38,15 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>9e287db8-249e-457d-b952-01106e31986d</Key>
-      <Name>From Email Address</Name>
-      <Alias>fromEmailAddress</Alias>
-      <Definition>199736b3-ef8b-441e-86d9-5e8948dbf56b</Definition>
-      <Type>Umbraco.Community.Contentment.TextInput</Type>
-      <Mandatory>false</Mandatory>
-      <Validation>[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+.[a-zA-Z0-9-.]+</Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>4</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>a70ffece-f6ab-4daf-972a-67dcb63ba5e7</Key>
-      <Name>Heading</Name>
-      <Alias>heading</Alias>
+      <Key>cea8fdbe-94a9-4368-8f33-d0bf590780c4</Key>
+      <Name>Custom Validation Regex</Name>
+      <Alias>customValidationRegex</Alias>
       <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
       <Type>Umbraco.TextBox</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
+      <SortOrder>11</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -86,7 +54,23 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>820f989f-098b-406b-b805-8574056ce9d6</Key>
+      <Key>ec88fd87-4b08-4004-9ce2-ffd16f1bd7b8</Key>
+      <Name>Default Value</Name>
+      <Alias>defaultValue</Alias>
+      <Definition>77ea65d2-1c83-4581-b9b5-404f4bef8095</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>3</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>403be138-6ff5-4119-b41e-420d53c9746b</Key>
       <Name>Internal Name</Name>
       <Alias>internalName</Alias>
       <Definition>fd70a433-6939-4d7e-84b8-59392baa4277</Definition>
@@ -102,11 +86,43 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>036dace7-d344-4251-82ba-67d308199373</Key>
-      <Name>Introduction</Name>
-      <Alias>introduction</Alias>
-      <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
-      <Type>Umbraco.TinyMCE</Type>
+      <Key>36075aca-240b-4bbe-8457-00cf62eb0a82</Key>
+      <Name>Label</Name>
+      <Alias>label</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>00da3de2-57b7-400b-abff-6b2ebcb83dd4</Key>
+      <Name>Maximum Length</Name>
+      <Alias>maximumLength</Alias>
+      <Definition>2e6d3631-066e-44b8-aec4-96f09099b2b5</Definition>
+      <Type>Umbraco.Integer</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>8</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>1c2b5944-564b-47ec-9f0b-fd45faa23829</Key>
+      <Name>Placeholder</Name>
+      <Alias>placeholder</Alias>
+      <Definition>fd70a433-6939-4d7e-84b8-59392baa4277</Definition>
+      <Type>Umbraco.TextBox</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
@@ -118,15 +134,15 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>1e89d2c7-0fd4-4ee5-98f9-54c1927727da</Key>
-      <Name>Message</Name>
-      <Alias>message</Alias>
-      <Definition>7961dc24-152f-4e85-a8df-8456dc7769b0</Definition>
-      <Type>Umbraco.BlockList</Type>
+      <Key>c791024d-1d17-4e9a-8f78-73f4b654b868</Key>
+      <Name>Rows</Name>
+      <Alias>rows</Alias>
+      <Definition>bbd6db00-2903-4358-b894-bfd642f8ca76</Definition>
+      <Type>Umbraco.Slider</Type>
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>8</SortOrder>
+      <SortOrder>4</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -134,15 +150,15 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>cab6f2f8-0e00-46f6-8762-3044e92323d6</Key>
-      <Name>Message Introduction</Name>
-      <Alias>messageIntroduction</Alias>
-      <Definition>a8d30e30-c562-49b7-8fd2-f0c393ba4399</Definition>
-      <Type>Umbraco.TextArea</Type>
-      <Mandatory>true</Mandatory>
+      <Key>f67f408b-75ef-4eca-9e9c-5ef483bfbe9b</Key>
+      <Name>Validation</Name>
+      <Alias>validation</Alias>
+      <Definition>a9b7c4c2-d474-43c7-9933-d2fa77734531</Definition>
+      <Type>Our.Umbraco.CdCheckbox</Type>
+      <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>5</SortOrder>
+      <SortOrder>9</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -150,15 +166,15 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>9835409d-ad8d-48e3-a2c9-9b7e2f7a7328</Key>
-      <Name>Subject</Name>
-      <Alias>subject</Alias>
+      <Key>19cbf3ba-4c12-4972-a941-a3cd88f42688</Key>
+      <Name>Validation Error Message</Name>
+      <Alias>validationErrorMessage</Alias>
       <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
       <Type>Umbraco.TextBox</Type>
-      <Mandatory>true</Mandatory>
+      <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>6</SortOrder>
+      <SortOrder>12</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -166,11 +182,11 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>94ab1509-7751-41ac-becd-28895dd960b0</Key>
-      <Name>Submit Button Label</Name>
-      <Alias>submitButtonLabel</Alias>
-      <Definition>fd70a433-6939-4d7e-84b8-59392baa4277</Definition>
-      <Type>Umbraco.TextBox</Type>
+      <Key>055097ed-2ada-4edb-a87f-90a19d872aea</Key>
+      <Name>Validation Type</Name>
+      <Alias>validationType</Alias>
+      <Definition>e72d5167-8c59-422f-a462-336a823e1150</Definition>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
@@ -181,26 +197,10 @@
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
-    <GenericProperty>
-      <Key>1126e93a-3f4f-496d-be9c-6d3a8ff0f167</Key>
-      <Name>To Email Address</Name>
-      <Alias>toEmailAddress</Alias>
-      <Definition>199736b3-ef8b-441e-86d9-5e8948dbf56b</Definition>
-      <Type>Umbraco.Community.Contentment.TextInput</Type>
-      <Mandatory>true</Mandatory>
-      <Validation>[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+.[a-zA-Z0-9-.]+</Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>3</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>1372ffbd-97f3-48e6-9d01-6a42ae478679</Key>
+      <Key>f9507418-3856-4765-a603-7da4be3d0df6</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Tab</Type>
