--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/formtextinputmessage.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/formtextinputmessage.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="cc481234-e170-42a5-b6a1-3a9d15c2af97" Alias="formBlock" Level="2">
+<ContentType Key="4ef005f3-9e66-44b3-9358-239e77e34062" Alias="formTextInputMessage" Level="3">
   <Info>
-    <Name>Form</Name>
-    <Icon>icon-message color-indigo</Icon>
+    <Name>Text Input (Message)</Name>
+    <Icon>icon-remove color-deep-purple</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
@@ -14,7 +14,7 @@
       <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
       <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
     </HistoryCleanup>
-    <Folder>Blocks</Folder>
+    <Folder>Elements/Form</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
@@ -22,28 +22,12 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>6f9f2c73-2805-4186-9870-56e76f02a0d6</Key>
-      <Name>Confirmation Page</Name>
-      <Alias>confirmationPage</Alias>
-      <Definition>fd1e0da5-5606-4862-b679-5d0cf3a52a59</Definition>
-      <Type>Umbraco.ContentPicker</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>9</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>a40b550e-c679-4418-930c-5a86ff173941</Key>
-      <Name>Form Fields</Name>
-      <Alias>formFields</Alias>
-      <Definition>262b09a8-48e4-4627-bb9e-7df698eabe46</Definition>
-      <Type>Umbraco.BlockList</Type>
-      <Mandatory>true</Mandatory>
+      <Key>fdedbe4a-ad9b-4e2f-af09-886874ab0ad7</Key>
+      <Name>Autocomplete</Name>
+      <Alias>autocomplete</Alias>
+      <Definition>92897bc6-a5f3-4ffe-ae27-f2e7e33dda49</Definition>
+      <Type>Umbraco.TrueFalse</Type>
+      <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>7</SortOrder>
@@ -54,13 +38,29 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>9e287db8-249e-457d-b952-01106e31986d</Key>
-      <Name>From Email Address</Name>
-      <Alias>fromEmailAddress</Alias>
-      <Definition>199736b3-ef8b-441e-86d9-5e8948dbf56b</Definition>
-      <Type>Umbraco.Community.Contentment.TextInput</Type>
+      <Key>1bf02a1a-8d6b-40d3-b2e4-65b48ba55382</Key>
+      <Name>Custom Validation Regex</Name>
+      <Alias>customValidationRegex</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
       <Mandatory>false</Mandatory>
-      <Validation>[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+.[a-zA-Z0-9-.]+</Validation>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>11</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>70cc3962-854c-4ea9-9ccc-dbe65c93194e</Key>
+      <Name>Default Value</Name>
+      <Alias>defaultValue</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>4</SortOrder>
       <Tab Alias="content">Content</Tab>
@@ -70,23 +70,7 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>a70ffece-f6ab-4daf-972a-67dcb63ba5e7</Key>
-      <Name>Heading</Name>
-      <Alias>heading</Alias>
-      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
-      <Type>Umbraco.TextBox</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>820f989f-098b-406b-b805-8574056ce9d6</Key>
+      <Key>879a353c-da27-4f90-b647-3e0d0ce82d38</Key>
       <Name>Internal Name</Name>
       <Alias>internalName</Alias>
       <Definition>fd70a433-6939-4d7e-84b8-59392baa4277</Definition>
@@ -102,12 +86,12 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>036dace7-d344-4251-82ba-67d308199373</Key>
-      <Name>Introduction</Name>
-      <Alias>introduction</Alias>
-      <Definition>b18d3ef6-4eb2-49d2-a0df-b539b2d4b4f7</Definition>
-      <Type>Umbraco.TinyMCE</Type>
-      <Mandatory>false</Mandatory>
+      <Key>675fb5ef-c7b8-44f2-870e-2334cbf25c89</Key>
+      <Name>Label</Name>
+      <Alias>label</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>2</SortOrder>
@@ -118,12 +102,12 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>1e89d2c7-0fd4-4ee5-98f9-54c1927727da</Key>
-      <Name>Message</Name>
-      <Alias>message</Alias>
-      <Definition>7961dc24-152f-4e85-a8df-8456dc7769b0</Definition>
-      <Type>Umbraco.BlockList</Type>
-      <Mandatory>true</Mandatory>
+      <Key>48961aac-3035-4d0e-ab67-252bc5f6e2b6</Key>
+      <Name>Maximum Length</Name>
+      <Alias>maximumLength</Alias>
+      <Definition>2e6d3631-066e-44b8-aec4-96f09099b2b5</Definition>
+      <Type>Umbraco.Integer</Type>
+      <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>8</SortOrder>
@@ -134,43 +118,75 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
-      <Key>cab6f2f8-0e00-46f6-8762-3044e92323d6</Key>
-      <Name>Message Introduction</Name>
-      <Alias>messageIntroduction</Alias>
-      <Definition>a8d30e30-c562-49b7-8fd2-f0c393ba4399</Definition>
-      <Type>Umbraco.TextArea</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>5</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>9835409d-ad8d-48e3-a2c9-9b7e2f7a7328</Key>
-      <Name>Subject</Name>
-      <Alias>subject</Alias>
-      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
-      <Type>Umbraco.TextBox</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>6</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>94ab1509-7751-41ac-becd-28895dd960b0</Key>
-      <Name>Submit Button Label</Name>
-      <Alias>submitButtonLabel</Alias>
+      <Key>7b809bfd-33e4-440d-ac67-4361647361e2</Key>
+      <Name>Placeholder</Name>
+      <Alias>placeholder</Alias>
       <Definition>fd70a433-6939-4d7e-84b8-59392baa4277</Definition>
       <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>3</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>daf8ffea-ba54-40e4-bbed-04581b541e22</Key>
+      <Name>Type</Name>
+      <Alias>type</Alias>
+      <Definition>db8ca0bd-f400-4ac2-9ceb-70ee60b14980</Definition>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>04256c9d-a28d-4785-b159-789c24215e3b</Key>
+      <Name>Validation</Name>
+      <Alias>validation</Alias>
+      <Definition>a9b7c4c2-d474-43c7-9933-d2fa77734531</Definition>
+      <Type>Our.Umbraco.CdCheckbox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>9</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>de92975d-7d8e-4cf5-8139-eb86f26aaece</Key>
+      <Name>Validation Error Message</Name>
+      <Alias>validationErrorMessage</Alias>
+      <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>12</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>d154502a-c9d3-4438-993c-b20922cf5b78</Key>
+      <Name>Validation Type</Name>
+      <Alias>validationType</Alias>
+      <Definition>e72d5167-8c59-422f-a462-336a823e1150</Definition>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
@@ -181,26 +197,10 @@
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
-    <GenericProperty>
-      <Key>1126e93a-3f4f-496d-be9c-6d3a8ff0f167</Key>
-      <Name>To Email Address</Name>
-      <Alias>toEmailAddress</Alias>
-      <Definition>199736b3-ef8b-441e-86d9-5e8948dbf56b</Definition>
-      <Type>Umbraco.Community.Contentment.TextInput</Type>
-      <Mandatory>true</Mandatory>
-      <Validation>[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+.[a-zA-Z0-9-.]+</Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>3</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>1372ffbd-97f3-48e6-9d01-6a42ae478679</Key>
+      <Key>798fa2d3-8790-48c6-bbbf-4539e83473e1</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Tab</Type>
