--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/richtextblock.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/richtextblock.config
@@ -27,7 +27,7 @@
       <Alias>heading</Alias>
       <Definition>a8167bbd-a5e1-44f6-a18a-234ca269dcc5</Definition>
       <Type>Umbraco.TextBox</Type>
-      <Mandatory>true</Mandatory>
+      <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
