Removed alert block as this can be done in the RTE

--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/alertblock.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/alertblock.config
@@ -1,82 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="19fa12ef-e39f-475e-a869-1704fb32c226" Alias="alertBlock" Level="2">
-  <Info>
-    <Name>Alert</Name>
-    <Icon>icon-alert-alt color-indigo</Icon>
-    <Thumbnail>folder.png</Thumbnail>
-    <Description></Description>
-    <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
-    <Variations>Nothing</Variations>
-    <IsElement>true</IsElement>
-    <HistoryCleanup>
-      <PreventCleanup>False</PreventCleanup>
-      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
-      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
-    </HistoryCleanup>
-    <Folder>Blocks</Folder>
-    <Compositions />
-    <DefaultTemplate></DefaultTemplate>
-    <AllowedTemplates />
-  </Info>
-  <Structure />
-  <GenericProperties>
-    <GenericProperty>
-      <Key>bf931f6a-b254-4aaa-aed8-aca78d36f35c</Key>
-      <Name>Internal Name</Name>
-      <Alias>internalName</Alias>
-      <Definition>fd70a433-6939-4d7e-84b8-59392baa4277</Definition>
-      <Type>Umbraco.TextBox</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[The heading used to identify the block in the backoffice]]></Description>
-      <SortOrder>0</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>ca44d27d-0f7c-4050-b851-d0cf5ca358c9</Key>
-      <Name>Style</Name>
-      <Alias>style</Alias>
-      <Definition>0a25f868-c164-4b0f-a351-2236fd060f1d</Definition>
-      <Type>Umbraco.Community.Contentment.DataList</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>3c811d66-e0d6-4211-8a41-cd2631e8cd68</Key>
-      <Name>Text</Name>
-      <Alias>text</Alias>
-      <Definition>38e740e0-8d15-4952-b686-785e88db51df</Definition>
-      <Type>Umbraco.TinyMCE</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>2</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-  </GenericProperties>
-  <Tabs>
-    <Tab>
-      <Key>c2893f8b-d870-4f51-8429-0e1dd9c88769</Key>
-      <Caption>Content</Caption>
-      <Alias>content</Alias>
-      <Type>Tab</Type>
-      <SortOrder>0</SortOrder>
-    </Tab>
-  </Tabs>
-</ContentType>
+<Empty Key="19fa12ef-e39f-475e-a869-1704fb32c226" Alias="alertBlock" Change="Delete" />
