Updated to UmbCheckout RC8

--- a/UmbCheckout.StarterKit.Web/appsettings.json
+++ b/UmbCheckout.StarterKit.Web/appsettings.json
@@ -24,6 +24,9 @@
           "Password": null
         }
       },
+      "WebRouting": {
+        "UmbracoApplicationUrl": "https://localhost:44387/"
+      },
       "Content": {
         "AllowEditInvariantFromNonDefault": true,
         "ContentVersionCleanupPolicy": {
