Added Product Variants

--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/site-settings.config
@@ -375,12 +375,34 @@
     "id": 1159
   },
   {
-    "description": "#",
-    "title": "Contact",
-    "url": "#",
+    "udi": "umb://document/770b055b5149443980d12196de6d3939",
+    "key": "770b055b-5149-4439-80d1-2196de6d3939",
+    "name": "Blocks Demo",
+    "description": "/blocks-demo/",
+    "title": "Blocks Demo",
+    "url": "/blocks-demo/",
     "children": [],
-    "icon": "icon-link",
+    "icon": "icon-layout color-black",
+    "published": true,
+    "naviHide": false,
+    "culture": null,
     "itemType": "link"
+  },
+  {
+    "description": "/contact/",
+    "title": "Contact",
+    "url": "/contact/",
+    "children": [],
+    "icon": "icon-layout color-black",
+    "itemType": "link",
+    "udi": "umb://document/17597e1c8af24cf8bc61a1001686dfd7",
+    "key": "17597e1c-8af2-4cf8-bc61-a1001686dfd7",
+    "name": "Contact",
+    "anchor": "",
+    "published": true,
+    "naviHide": false,
+    "culture": null,
+    "id": 1223
   }
 ]]]></Value>
     </topNavigation>
