--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/product.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/product.config
@@ -6,7 +6,7 @@
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
+    <IsListView>True</IsListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
     <HistoryCleanup>
@@ -24,7 +24,9 @@
       <Template Key="e7c195f1-5312-462c-8950-9b12635f9627">Product</Template>
     </AllowedTemplates>
   </Info>
-  <Structure />
+  <Structure>
+    <ContentType Key="3ea039ad-6a3a-4bc4-82bb-4782ee232764" SortOrder="0">product1</ContentType>
+  </Structure>
   <GenericProperties>
     <GenericProperty>
       <Key>99f55625-3f4d-47fd-9bfe-8980760a2b70</Key>
