Added maximum items setting

--- a/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/Content/home.config
@@ -46,7 +46,8 @@
       "recentProducts": "umb://document/1435f4ed51a2467c9860d2b9e8092854",
       "heading": "Recently Added ",
       "introduction": "",
-      "productCategory": "umb://document/2a48aecf7d0745fea4f113bd5144342a"
+      "productCategory": "umb://document/2a48aecf7d0745fea4f113bd5144342a",
+      "maximumItems": "9"
     }
   ],
   "settingsData": [
