--- a/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/recentproductsblock.config
+++ b/UmbCheckout.StarterKit.Web/uSync/v9/ContentTypes/recentproductsblock.config
@@ -70,6 +70,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>91041051-8db3-485b-b4ab-0655561740f3</Key>
+      <Name>Maximum Items</Name>
+      <Alias>maximumItems</Alias>
+      <Definition>a4778127-1b4e-4c47-9bd0-ebd6cc0624e6</Definition>
+      <Type>Umbraco.Slider</Type>
+      <Mandatory>true</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>6</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>9dee4910-3081-4ddf-a9fe-b4a34c9f7b29</Key>
       <Name>Product Category</Name>
       <Alias>productCategory</Alias>
